keywords: 'what"s new, features, new, release notes, enhancements, fixes' 
summary: Découvrez les nouveautés de la copie et de la synchronisation BlueXP. 
---
= Nouveautés de la copie et de la synchronisation BlueXP
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Découvrez les nouveautés de la copie et de la synchronisation BlueXP.



== 27 octobre 2024



=== Correctifs de bogues

Nous avons mis à jour le service de copie et de synchronisation BlueXP ainsi que le courtier en données pour corriger quelques bugs. La nouvelle version du courtier de données est 1.0.56.



== 16 septembre 2024



=== Correctifs de bogues

Nous avons mis à jour le service de copie et de synchronisation BlueXP ainsi que le courtier en données pour corriger quelques bugs. La nouvelle version du courtier de données est 1.0.55.



== 11 août 2024



=== Correctifs de bogues

Nous avons mis à jour le service de copie et de synchronisation BlueXP ainsi que le courtier en données pour corriger quelques bugs. La nouvelle version du courtier de données est 1.0.54.



== 14 juillet 2024



=== Correctifs de bogues

Nous avons mis à jour le service de copie et de synchronisation BlueXP ainsi que le courtier en données pour corriger quelques bugs. La nouvelle version du courtier de données est 1.0.53.



== 2 juin 2024



=== Correctifs de bogues

Le service de copie et de synchronisation BlueXP a été mis à jour pour corriger quelques bugs. Le courtier en données a également été mis à jour pour appliquer des mises à jour de sécurité. La nouvelle version du courtier de données est 1.0.52.



== 8 avril 2024



=== Prise en charge de RHEL 8.9

Le courtier en données est désormais pris en charge sur les hôtes exécutant Red Hat Enterprise Linux 8.9.

https://docs.netapp.com/us-en/bluexp-copy-sync/task-installing-linux.html#linux-host-requirements["Afficher la configuration requise pour l'hôte Linux"].



== 11 février 2024


