@@ -495,7 +495,6 @@
   <block id="ace028fe1c5dc8fb39091440d89fd9fd" category="section-title">Configuration requise pour l'hôte Linux</block>
   <block id="17308c76959fcb971603b7274a57c128" category="list-text">*Système d'exploitation* :</block>
   <block id="735736a0904d4dd4641f1c0b6e93ac7a" category="paragraph">CentOS Stream n'est pas pris en charge.</block>
-  <block id="083265255bba92c059791cd3a9803274" category="list-text">Ubuntu Server 20.04 LTS</block>
   <block id="473733802c02f67f489689f787461e62" category="list-text">SUSE Linux Enterprise Server 15 SP1</block>
   <block id="a855786065eb842829e76727ee601d59" category="paragraph">La commande<block ref="bcb2c9ba3070afceaf76b8ceb5e4a15b" prefix=" " category="inline-code"></block> doit être exécuté sur l'hôte avant d'installer le courtier de données.</block>
   <block id="35ec85020897e56acfca830003a03e8c" category="paragraph">Un système Red Hat Enterprise Linux doit être enregistré avec Red Hat Subscription Management. S'il n'est pas enregistré, le système ne peut pas accéder aux référentiels pour mettre à jour les logiciels tiers requis pendant l'installation.</block>
@@ -1844,7 +1843,6 @@
   <block id="b2eb229bee01785cca939d890a06b37c" category="paragraph">Le courtier en données est désormais pris en charge sur les hôtes exécutant Red Hat Enterprise Linux 8.9.</block>
   <block id="403a870c3777a3434883cf3338197e1e" category="inline-link">Afficher la configuration requise pour l'hôte Linux</block>
   <block id="33437394afeba112bc78a89e1164345e" category="paragraph"><block ref="bddca2b75222059ea164cace70f493c0" category="inline-link-rx"></block>.</block>
-  <block id="62839d4e5d5a9de91b6f7d896439934b" category="list-text">Red Hat Enterprise Linux 8.5, 8.8 et 8.9</block>
   <block id="0d76b6f5f7ef4feb4ba34ba4dc8a3356" category="section-title">Quels types de relations de synchronisation préservent les métadonnées du stockage objet ?</block>
   <block id="b0f6c5b9e24f06b742cf40691ecda0a1" category="section-title">Quels types de métadonnées sont répliquées lors des synchronisations et où NFS ou SMB sont la source ?</block>
   <block id="fca3645c4b9c57a087d67f345e46b21a" category="paragraph">Les métadonnées telles que l'ID utilisateur, l'heure de modification, le temps d'accès et le GID sont répliquées par défaut. Les utilisateurs peuvent choisir de répliquer une liste de contrôle d'accès à partir de CIFS en la marquant comme requis lors de la création d'une relation de synchronisation.</block>
@@ -1948,4 +1946,9 @@
   <block id="734a65eeb41483b7a636c9cf13e4aad7" category="list-text">Sélectionnez *AWS*.</block>
   <block id="045842584f2fd61a80d6c55f49bd1f4f" category="video-title">Abonnez-vous à la copie et à la synchronisation BlueXP  depuis AWS Marketplace</block>
   <block id="09cf0bd8febab038e59733b8d4ac6505" category="video-title">Abonnez-vous à la copie et à la synchronisation BlueXP  depuis Azure Marketplace</block>
+  <block id="83f73c94bb5f748ce272fa98b9d62582" category="doc">Nouvelle prise en charge du système d'exploitation pour le courtier de données</block>
+  <block id="726c1f4efc6286c68c0e686bb97c19c5" category="paragraph">Le courtier de données est désormais pris en charge sur les hôtes exécutant Red Hat Enterprise 9.4, Ubuntu 23.04 et Ubuntu 24.04.</block>
+  <block id="87a7ac9f5b2ba3fbc595d73b0c0dc71c" category="list-text">Red Hat Enterprise Linux 8.5, 8.8, 8.9 et 9.4</block>
+  <block id="62c1014736e4269f295e55cd59d3a0ec" category="list-text">Ubuntu Server 20.04 LTS, 23.04 LTS et 24.04 LTS</block>
+  <block id="723559e2f2e86e612c412da00a435eea" category="section-title">2 février 2025</block>
 </blocks>
