@@ -27,9 +27,9 @@ Lorsque vous créez un nouveau groupe de courtiers de données, choisissez l'opt
 +
 CentOS Stream n'est pas pris en charge.
 
-** Red Hat Enterprise Linux 8.5, 8.8 et 8.9
+** Red Hat Enterprise Linux 8.5, 8.8, 8.9 et 9.4
 ** Rocky Linux 9
-** Ubuntu Server 20.04 LTS
+** Ubuntu Server 20.04 LTS, 23.04 LTS et 24.04 LTS
 ** SUSE Linux Enterprise Server 15 SP1
 +
 La commande `yum update` doit être exécuté sur l'hôte avant d'installer le courtier de données.
